--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check-format": "eslint --cache . && prettier --check --cache .;",
     "docs": "npm run build && npm run docs:generate && npm run format",
     "docs:generate": "node --experimental-strip-types scripts/generate-docs.ts",
-    "start": "npm run build && node build/src/index.js",
+    "start": "npm run build && npm run start:stdio",
     "start-debug": "DEBUG=mcp:* DEBUG_COLORS=false npm run build && node build/src/index.js",
     "test:node20": "node --require ./build/tests/setup.js --test-reporter spec --test-force-exit --test build/tests",
     "test": "npm run build && node --require ./build/tests/setup.js --no-warnings=ExperimentalWarning --test-reporter spec --test-force-exit --test \"build/tests/**/*.test.js\"",
@@ -20,7 +20,9 @@
     "test:only:no-build": "node --require ./build/tests/setup.js --no-warnings=ExperimentalWarning --test-reporter spec --test-force-exit --test --test-only \"build/tests/**/*.test.js\"",
     "test:update-snapshots": "npm run build && node --require ./build/tests/setup.js --no-warnings=ExperimentalWarning --test-force-exit --test --test-update-snapshots \"build/tests/**/*.test.js\"",
     "prepare": "node --experimental-strip-types scripts/prepare.ts",
-    "sync-server-json-version": "node  --experimental-strip-types scripts/sync-server-json-version.ts && npm run format"
+    "sync-server-json-version": "node  --experimental-strip-types scripts/sync-server-json-version.ts && npm run format",
+    "start:stdio": "node build/src/index.js",
+    "start:http": "node scripts/start-http.mjs"
   },
   "files": [
     "build/src",
@@ -38,15 +40,21 @@
   "mcpName": "io.github.ChromeDevTools/chrome-devtools-mcp",
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.18.2",
+    "@smithery/sdk": "^1.6.8",
     "core-js": "3.45.1",
+    "cors": "^2.8.5",
     "debug": "4.4.3",
+    "express": "^4.21.2",
     "puppeteer-core": "24.22.3",
-    "yargs": "18.0.0"
+    "yargs": "18.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@stylistic/eslint-plugin": "^5.4.0",
+    "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.12",
+    "@types/express": "^4.17.23",
     "@types/filesystem": "^0.0.36",
     "@types/node": "^24.3.3",
     "@types/sinon": "^17.0.4",
