chore: update package.json and smithery.yaml configuration
- Updated dependencies in package.json to include @smithery/cli version 1.4.6.
- Modified smithery.yaml to change the startCommand type from stdio to http and simplified the command configuration.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,13 +1,11 @@
+runtime: container
+build:
+  dockerfile: Dockerfile
+  dockerBuildPath: .
 startCommand:
-  type: stdio
-  commandFunction: |
-    () => ({
-      command: 'node',
-      args: ['build/src/index.js'],
-      env: {
-        TRANSPORT: 'http'
-      }
-    })
+  type: http
+  env:
+    TRANSPORT: http
 configSchema:
   type: object
   additionalProperties: false
