--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@smithery/cli": "^1.4.6",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.12",
