--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.1",
   "description": "MCP server for Chrome DevTools",
   "type": "module",
+  "module": "src/index.ts",
   "bin": "./build/src/index.js",
   "main": "index.js",
   "scripts": {
