Extended smithery.yaml (smithery.yaml:1) so the Smithery config schema now exposes the new flags we rely on: experimentalDevtools and chromeArg (string array) alongside the existing options, ensuring Smithery can surface those features against our current code. Working tree otherwise clean except for the existing untracked connect-test.mjs. Suggested next step: re-run the Smithery build/deploy to confirm the updated schema resolves the earlier complaint.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -44,6 +44,14 @@ configSchema:
     acceptInsecureCerts:
       type: boolean
       description: 'Ignore TLS certificate errors when launching Chrome.'
+    experimentalDevtools:
+      type: boolean
+      description: 'Enable DevTools automation targets (experimental).'
+    chromeArg:
+      type: array
+      description: 'Additional command-line switches to pass to Chrome.'
+      items:
+        type: string
 exampleConfig:
   channel: stable
   headless: true
