--- a/package.json
+++ b/package.json
@@ -46,13 +46,15 @@
     "cors": "^2.8.5",
     "debug": "4.4.3",
     "express": "^4.21.2",
-    "puppeteer-core": "24.22.3",
     "puppeteer": "24.23.0",
+    "puppeteer-core": "24.22.3",
     "yargs": "18.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@mcp-use/inspector": "^0.3.10",
+    "@modelcontextprotocol/inspector": "^0.17.1",
     "@smithery/cli": "^1.4.6",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@types/cors": "^2.8.19",
