refactor(smithery): convert env vars to map format and add secret flags
Changed the environment variable definitions in `smithery.yaml` from a list format to a key‑map format. Updated the description for `BROWSERBASE_API_KEY` and added `secret: true` to `BROWSERBASE_API_KEY`, `BROWSERBASE_CONTEXT_ID`, and `BROWSERBASE_PERSIST` to clearly mark sensitive values. This improves readability and security handling of configuration variables.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -8,13 +8,15 @@ startCommand:
     TRANSPORT: http
 
 env:
-  - name: BROWSERBASE_API_KEY
-    description: 'Browserbase API key. Required to create managed sessions.'
+  BROWSERBASE_API_KEY:
+    description: 'Browserbase API key used to create managed sessions.'
     required: true
-  - name: BROWSERBASE_CONTEXT_ID
+    secret: true
+  BROWSERBASE_CONTEXT_ID:
     description: 'Optional Browserbase context ID to reuse saved browser state.'
     required: false
-  - name: BROWSERBASE_PERSIST
+    secret: true
+  BROWSERBASE_PERSIST:
     description: 'Persist context state after the session ends (true/false).'
     required: false
     default: 'true'
