--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.1",
   "description": "MCP server for Chrome DevTools",
   "type": "module",
-  "module": "src/index.ts",
+  "module": "build/src/index.js",
   "bin": "./build/src/index.js",
   "main": "index.js",
   "scripts": {
@@ -55,7 +55,7 @@
     "@eslint/js": "^9.35.0",
     "@mcp-use/inspector": "^0.3.10",
     "@modelcontextprotocol/inspector": "^0.17.1",
-    "@smithery/cli": "^1.4.6",
+    "@smithery/cli": "^1.6.2",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.12",
