--- a/smithery.yaml
+++ b/smithery.yaml
@@ -8,7 +8,8 @@ startCommand:
     TRANSPORT: http
 configSchema:
   type: object
-  additionalProperties: false
+  # Allow extra keys for auth/providers coming from Test profile
+  additionalProperties: true
   properties:
     browserUrl:
       type: string
@@ -52,8 +53,30 @@ configSchema:
       description: 'Additional command-line switches to pass to Chrome.'
       items:
         type: string
+    browserbase:
+      type: object
+      description: 'Launch a remote Chrome via Browserbase (scanner-friendly).'
+      additionalProperties: false
+      properties:
+        apiKey:
+          type: string
+          description: 'Browserbase API key used to create sessions.'
+        projectId:
+          type: string
+          description: 'Browserbase project ID to associate sessions with.'
+        contextId:
+          type: string
+          description: 'Optional persistent context ID.'
+        persist:
+          type: boolean
+          description: 'Whether to persist the Browserbase context.'
+          default: true
 exampleConfig:
   channel: stable
   headless: true
   isolated: true
   viewport: '1280x720'
+  browserbase:
+    # apiKey is provided via Test profile or secret store — do not hardcode
+    projectId: 'bc914a3df39095025464368c5cabf0af8ae97b1f'
+    persist: true
